Add new projects

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <li>We talked with Customer Success Managers and the main points of feedback were:
             <ul>
               <li>No easy way to A/B test messages in the legacy experience</li>
-              <li>No way to exclude specific customers from a segment on legacy experience</li>
+              <li>No way to exclude specific customers from a segment in the legacy experience</li>
             </ul>
           </li>
           <li>We also received feedback from merchants via a widget on the home page:
@@ -172,7 +172,7 @@
       <p>We made the following updates to the product in hopes of boosting Flow Builder usage:</p>
         <ul>
           <li>Surface a “Try Flow Builder” option within the legacy SMS campaign and automation experiences</li>
-          <li>Add template option for SMS campaign and automation flows to make building flows easier</li>
+          <li>Add template options for SMS campaign and automation flows to make building flows easier</li>
           <li>Create an option to convert legacy SMS automations to automation flows</li>
         </ul>
         <div class="large-image-container">
@@ -180,14 +180,14 @@
             alt="Adding a button to try Flow Builder in the legacy experience">
         </div>
         <div class="note center">
-          <p>The addition of a "Try Flow Builder" button added to the legacy experience</p>
+          <p>(Above) The addition of a "Try Flow Builder" button added to the legacy experience</p>
         </div>
         <div class="large-image-container">
           <img class="project-image-large video-border" src="images/projects/flow-builder/8-migration.jpg"
             alt="Adding a way to convert legacy automations into automation flows">
         </div>
         <div class="note center">
-          <p>A step in the process for migrating legacy automations to Flow Builder</p>
+          <p>(Above) A step in the process for migrating legacy automations to Flow Builder</p>
         </div>
         <hr>
         <h3>Objectives follow-up</h3>
@@ -229,7 +229,7 @@
         they opt out of using Text-to-Buy in its current state.</p>
       <hr>
       <h3>Original experience</h3>
-      <p>Currently, the current Text-to-Buy experience requires merchants to select a product
+      <p>Currently, the Text-to-Buy experience requires merchants to select a product
         and all its options before sending out a Text-to-Buy campaign.</p>
       <div class="large-image-container">
           <img class="project-image-large" src="images/projects/variant/2-current-experience.jpg"
@@ -252,7 +252,7 @@
         <li>Feedback via Customer Success Managers
           <ul>
             <li>
-              A few merchants who had been onboarded into the program,
+              A few merchants who had been onboarded into the program
               decided to opt out because the majority of their best-selling products require customer selection. 
             </li>
             <li>"I don't believe my items are good anymore to test this." - Anonymous Merchant</li>
@@ -296,7 +296,7 @@
       <h3>Testing</h3>
       <p>We ran two rounds of usability testing. For the first round, users ran through 2 mobile-simulated experiences
         on their computers. The first prototype had them place an order solely in the text thread, while the second
-        prototype had users got back and forth between the text thread and a web checkout experience.
+        prototype had users go back and forth between the text thread and a web checkout experience.
       </p>
       <ul>
         <li>80% of users said the text thread experience was easy to follow.</li>
@@ -317,9 +317,15 @@
         </div>
       </div>
 
+      <div class="note center">
+        <p>(Above left) The text-based prototype, (Above right) The web-based prototype</p>
+      </div>
+
       <p>Since the results of the initial usability test were very similar, we decided to iterate on
-        the two experiences further and test again. This time we were able to test on mobile devices
-        to ensure the most authentic experience for test participants. The first prototype still took
+        the two experiences further and test again. This time, we were able to test on mobile devices
+        to ensure the most authentic experience for test participants. </p>
+        <p>
+        The first prototype still took
         place entirely in the text thread, but the selection process was simplified furthered. Meanwhile,
         the second prototype was updated so that only the first step took place in the text thread and
         the rest of the experience was on mobile web. 
@@ -328,16 +334,19 @@
         <li>~83% of users said the text thread experience was easy to follow.</li>
         <li>~67% of users said the web checkout experience was easy to follow.</li>
         <li>Overall, ~83% of users preferred the text thread experience over the web checkout experience.<br>
-          (Represented in the gif below)</li>
       </ul>
   <div class="large-image-container">
         <img class="project-image-xsmall video-border" src="images/projects/variant/5-new-prototype.gif"
           alt="The  winning experience: text thread">
       </div>
+      <div class="note center">
+        <p>(Above) The preferred text-based prototype</p>
+      </div>
+
       <hr>
       <h3>New designs</h3>
       <p>Once we had our kickoff meeting surrounding the project, we uncovered some possible limitations
-        in the winning Usability Hub design. Therefore, as an MVP, we slightly shifted in our approach 
+        in the winning Usability Hub design. Therefore, as an MVP, we slightly shifted our approach 
         by scaling back complexity and focusing on products that only have one customizable option.
         However, once we get validation from the new implementation, the team will spike on how we can
         leverage our data to make the winning design a reality.</p>
@@ -346,6 +355,7 @@
               alt="New Text-to-Buy experience for merchants">
           </div>
           <div class="note center">
+            <p>
             (Above) What a merchant will see when creating a Text-to-Buy message
           </p>
 </div>
@@ -357,6 +367,7 @@
             alt="New Text-to-Buy experience for customers">
             </div>
         <div class="note center">
+          <p>
             (Above) What a merchant's customers will experience
           </p>
         </div>
@@ -450,7 +461,7 @@
             alt="Early iterations of the pets rule">
         </div>
         <div class="note center">
-          <p>Above are some early iterations for a rule about pets</p>
+          <p>(Above) Some early iterations for a rule about pets</p>
         </div>
         <hr>
         <h3>Testing</h3>
@@ -465,7 +476,7 @@
             alt="A prototype demonstrating the rule allowing pets">
         </div>
         <div class="note center">
-          <p>Above is a brief look into the functioning prototype</p>
+          <p>(Above) A brief look into the functioning prototype</p>
         </div>
         <hr>
         <h3>Outcomes</h3>
@@ -633,7 +644,7 @@
           alt="A video of the change experience that was tested on a mobile device">
       </div>
       <div class="note center">
-        <p>Above is a portion of the tested prototype that included changing a reservation</p>
+        <p>(Above) A portion of the tested prototype that included changing a reservation</p>
       </div>
       <hr>
       <h3>New designs</h3>
@@ -783,14 +794,14 @@
           alt="Mapping the old decline reasons to the new decline reasons">
       </div>
       <div class="note center">
-        <p>Above is a mapping of the old decline reasons to the newly proposed reasons</p>
+        <p>(Above) A mapping of the old decline reasons to the newly proposed reasons</p>
       </div>
       <div class="large-image-container">
         <img class="project-image-large" src="images/projects/decline-flow/process2.png"
           alt="Different explorations of calendar block prompt mid decline flow">
       </div>
       <div class="note center">
-        <p>Above are different explorations prompting hosts to block their calendars if declining due to property
+        <p>(Above) Different explorations prompting hosts to block their calendars if declining due to property
           unavailability</p>
       </div>
       <hr>
@@ -921,7 +932,7 @@
           alt="Early explorations of the mobile inbox design">
       </div>
       <div class="note center">
-        <p>Above are several early iterations of a mobile inbox design</p>
+        <p>(Above) Several early iterations of a mobile inbox design</p>
       </div>
       <hr>
       <h3>Testing</h3>
