--- a/index.html
+++ b/index.html
@@ -270,10 +270,8 @@
       <hr>
       <h3>Objectives</h3>
       <ul>
-        <li>How might we...increase Text-to-Buy usage?
-          <ul>
-            <li>How might we...allow merchants' customers to choose their own products with Text-to-Buy?</li>
-          </ul>
+          <li>How might we...better support current Text-to-Buy merchants whose products have multiple variants?</li>
+          <li>How might we...make Text-to-Buy more appealing to more merchants?</li>
         </li>
       </ul>
       <hr>
@@ -445,9 +443,9 @@
         <hr>
         <h3>Objectives</h3>
         <ul>
-          <li>How might we...disincentivize the use of custom content</li>
-          <li>How might we...reduce cancellations and declines</li>
-          <li>How might we...encourage completion of house rules</li>
+          <li>How might we...disincentivize the use of custom content?</li>
+          <li>How might we...reduce cancellations and declines?</li>
+          <li>How might we...encourage completion of house rules?</li>
         </ul>
         <hr>
         <h3>Process</h3>
@@ -778,9 +776,9 @@
       <hr>
       <h3>Objectives</h3>
       <ul>
-        <li>How might we...help hosts keep their settings up-to-date</li>
-        <li>How might we...increase booking acceptance rates</li>
-        <li>How might we...decrease booking decline rates</li>
+        <li>How might we...help hosts keep their settings up-to-date?</li>
+        <li>How might we...increase booking acceptance rates?</li>
+        <li>How might we...decrease booking decline rates?</li>
       </ul>
       <hr>
       <h3>Process</h3>
