Add Vrbo language

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
       <div class="project-lightbox-content">
         <h2>House Rules</h2>
         <h3>Overview</h3>
-        <p>Homeowners set property rules travelers must agree to prior to booking. These rules encompass items like max
+        <p>Homeowners that use Vrbo, a vacation rental platform, set property rules travelers must agree to prior to booking. These rules encompass items like max
           occupancy, minimum renter age, allowance of pets, and several other rules.</p>
         <hr>
         <h3>Problem</h3>
@@ -542,7 +542,7 @@
       <div class="project-lightbox-content">
       <h2>Cancel and change</h2>
       <h3>Overview</h3>
-      <p>Hosts are able to change or cancel a guest's reservation if the need arises.</p>
+      <p>When using Vrbo, a vacation rental platform, hosts must sometimes change or cancel a guest's reservation if the need arises.</p>
       <hr>
       <h3>Problem</h3>
       <p>When a host cancels on a guest, everyone loses. The guest is disappointed, the host's search rank falls, and
@@ -730,7 +730,7 @@
       <div class="project-lightbox-content">
       <h2>Decline coaching</h2>
       <h3>Overview</h3>
-      <p>Hosts can approve or decline a traveler's request to book their property. The decline flow allows hosts to
+      <p>Vrbo is a vacation rental platform that allows homeowners to rent out their property. Homeowners/hosts can approve or decline a traveler's request to book their property. The decline flow allows hosts to
         explain why they cannot host a guest.</p>
       <hr>
       <h3>Problem</h3>
@@ -871,7 +871,7 @@
       <div class="project-lightbox-content">
       <h2>Inbox redesign</h2>
       <h3>Overview</h3>
-      <p>Hosts spend the majority of their time managing reservations and messaging guests via their inbox. The inbox
+      <p>While interacting with Vrbo, a vacation rental platform, hosts spend the majority of their time managing reservations and messaging guests via their inbox. The inbox
         page is the second most visited page on Vrbo.</p>
       <hr>
       <h3>Problem</h3>
