--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </ul>
         <hr>
         <h3>Process</h3>
-        <p>As the lead product designer on the project, I interviewed merchants about their experience using Flow Builder.
+        <p>As the lead Product Designer on the project, I interviewed merchants about their experience using Flow Builder.
           In addition to running customer interviews, I created a Pendo survey soliciting asynchronous feedback and utilized Amplitude
           to track Flow Builder usage. I also worked closely with Product and Engineering by conducting a workship to highlight
           opportunities for increasing adoption.
@@ -276,7 +276,7 @@
       </ul>
       <hr>
       <h3>Process</h3>
-      <p>As the lead product designer on the project, I iterated through several ideas and shared them
+      <p>As the lead Product Designer on the project, I iterated through several ideas and shared them
         with the Postscript design team for feedback. After sharing the refined designs with Product and
         Engineering, I used UsabilityHub to run a series of usability tests, comparing different approaches.
         I shared the findings with my team and led a kickoff meeting where I aligned with Engineering on requirements.</p>
@@ -449,8 +449,8 @@
         </ul>
         <hr>
         <h3>Process</h3>
-        <p>As the lead product designer on the project, I attended weekly progress meetings with the product manager,
-          technical project manager, marketing specialist, and content strategist. I also worked closely with the
+        <p>As the lead Product Designer on the project, I attended weekly progress meetings with the Product Manager,
+          Technical Project Manager, Marketing Specialist, and Content Strategist. I also worked closely with the
           traveler designer to ensure there was consistency across the host and traveler experience.
           Lastly, I regularly shared my working designs at our host team design critique for transparency and feedback.
         </p>
@@ -598,7 +598,7 @@
       <hr>
       <h3>Process</h3>
       <ul>
-        <li>As the lead product designer, I had weekly meetings with the Product Manager and Content Strategist on the
+        <li>As the lead Product Designer, I had weekly meetings with the Product Manager and Content Strategist on the
           project.</li>
         <li>During the host design team's UX critique meeting, I would often share my work for feedback.</li>
         <li>I researched competitor designs (like Airbnb and Booking.com).</li>
@@ -782,7 +782,7 @@
       </ul>
       <hr>
       <h3>Process</h3>
-      <p>As the lead product designer on this project, I worked with the Product Manager and Content Strategist. We
+      <p>As the lead Product Designer on this project, I worked with the Product Manager and Content Strategist. We
         worked closely with the Engineering team to ensure our ideas were feasible from a code standpoint and received
         thoughtful UX feedback from the engineers in turn. I also shared the work-in-progress designs with the larger
         design team to ensure a variety of feedback.
