update content AGAIN

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
       <div class="header-text">
         <h1>Hello, I'm Jannon.</h1>
-        <h2>&amp; I'm a user experience designer.</h2>
+        <h2>&amp; I'm a Product Designer.</h2>
       </div>
     </div>
 
@@ -463,7 +463,7 @@
         </div>
         <hr>
         <h3>Testing</h3>
-        <p>Our UX researcher performed a remote moderated study where 9 participants walked through a multi-step
+        <p>Our UX Researcher performed a remote moderated study where 9 participants walked through a multi-step
           prototype. Our team was looking for feedback on:</p>
         <ul>
           <li>How easily hosts could edit and save rules</li>
@@ -923,7 +923,7 @@
       <h3>Process</h3>
       <p>During the aforementioned design swarm, our team was able to do a lot of competitive and analogus
         research pertaining to how other inbox-like designs were constructed. Utlizing the swarm artifacts, I worked as
-        the lead UX designer on the inbox redesign. I regularly met with the Product Manager, Engineers, and the Content
+        the lead Product Designer on the inbox redesign. I regularly met with the Product Manager, Engineers, and the Content
         Strategist to convey progress and troubleshoot issues with working designs. </p>
       <div class="large-image-container">
         <img class="project-image-large" src="images/projects/inbox/process1.png"
@@ -934,7 +934,7 @@
       </div>
       <hr>
       <h3>Testing</h3>
-      <p>Our UX researcher performed a remote moderated study where 9 participants walked through a native prototype. We
+      <p>Our UX Researcher performed a remote moderated study where 9 participants walked through a native prototype. We
         were looking for feedback on:</p>
       <ul>
         <li>How easily hosts could find inquiries</li>
