Update content yet again

--- a/index.html
+++ b/index.html
@@ -964,9 +964,9 @@
         <li>9/9 participants were able to easily differentiate unread inquiries from other messages</li>
         <li>8/9 participants discovered filters at a glance</li>
         <li>8/9 participants found the booking status badges useful</li>
-        <li>Participants didn not find the swiping functionality to be intuitive</li>
+        <li>Participants did not find the swiping functionality to be intuitive</li>
         <li>One participant said, “I like it. It's cleaner. It's more app-like. It's easier to use. More user friendly.
-          Overeall, big
+          Overall, big
           improvement.”</li>
       </ul>
       <hr>
