Update a lot of random stuff

--- a/index.html
+++ b/index.html
@@ -89,6 +89,33 @@
 
   <!-- Flow Builder adoption content -->
 
+<div id="versioningOpened" class="hide">
+    <div class="lightbox_content">
+      <p class="material-icons close">close</p>
+      <div class="project-lightbox-content">
+        <h2>Automation Flow Versioning</h2>
+        <h3>Overview</h3>
+
+        </div>
+        </div>
+        </div>
+
+
+        <div id="workshopsOpened" class="hide">
+    <div class="lightbox_content">
+      <p class="material-icons close">close</p>
+      <div class="project-lightbox-content">
+        <h2>Flow Builder Workshops</h2>
+        <h3>Overview</h3>
+
+        </div>
+        </div>
+        </div>
+
+
+
+
+
 
   <div id="flowBuilderOpened" class="hide">
     <div class="lightbox_content">
@@ -1026,6 +1053,22 @@
   <!-- Project thumbnail content -->
 
   <section id="projects" class="hide projects">
+
+<div class="projects-row">
+<div class="project-wrapper">
+      <p class="project-name">Automation Flow Versioning</p>
+      <div id="versioningClosed" class="project versioning">
+      </div>
+    </div>
+    <div class="project-wrapper">
+      <p class="project-name">Flow Builder Workshops</p>
+      <div id="workshopsClosed" class="project workshops">
+      </div>
+    </div>
+  </div>
+
+  <div class="projects-row">
+
     <div class="project-wrapper">
       <p class="project-name">Flow Builder Adoption</p>
       <div id="flowBuilderClosed" class="project flow-builder">
@@ -1036,6 +1079,9 @@
       <div id="variantClosed" class="project variant">
       </div>
     </div>
+    </div>
+    <div class="projects-row">
+
     <div class="project-wrapper">
       <p class="project-name">House rules</p>
       <div id="houseRulesClosed" class="project house-rules">
@@ -1046,6 +1092,9 @@
       <div id="declineFlowClosed" class="project decline-flow">
       </div>
     </div>
+    </div>
+    <div class="projects-row">
+
     <div class="project-wrapper">
       <p class="project-name">Cancel and change</p>
       <div id="cancelChangeClosed" class="project cancel-change">
@@ -1055,6 +1104,7 @@
       <p class="project-name">Inbox redesign</p>
       <div id="inboxClosed" class="project inbox">
       </div>
+    </div>
     </div>
   </section>
 
