Fix lightbox issues with new projects

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
   <!-- Lightbox content -->
 
-  <!-- Flow Builder adoption content -->
+  <!-- Automation Flow Versioning -->
 
 <div id="versioningOpened" class="hide">
     <div class="lightbox_content">
@@ -95,11 +95,109 @@
       <div class="project-lightbox-content">
         <h2>Automation Flow Versioning</h2>
         <h3>Overview</h3>
+        <p>TBD</p>
+        <hr>
+        <h3>Problem</h3>
+        <p>TBD</p>
+        <hr>
+        <h3>Original experience</h3>
+        <p>TBD</p>
+        <div class="large-image-container">
+          <img class="project-image-large" src="#"
+            alt="TBD">
+        </div>
+        <hr>
+        <h3>Research</h3>
+        <ul>
+          <li>UX hueristic evaluation*
+            <ul>
+              <li>TBD</li>
+            </ul>
+          </li>
+          <li>Design swarm
+            <ul>
+              <li>TBD</li>
+            </ul>
+          </li>
+        </ul>
+        <hr>
+        <h3>Objectives</h3>
+        <p>
+        <ul>
+          <li>TBD</li>
+        </ul>
+        </p>
+        <hr>
+        <h3>Process</h3>
+        <p>TBD</p>
+        <div class="large-image-container">
+          <img class="project-image-large" src="#"
+            alt="TBD">
+        </div>
+        <div class="note center">
+          <p>TBD</p>
+        </div>
+        <hr>
+        <h3>Testing</h3>
+        <p>TBD</p>
+        <ul>
+          <li>TBD</li>
+        </ul>
+        <div class="small-image-container">
+          <div>
+            <img class="project-image-xsmall" src="#"
+              alt="TBD">
+          </div>
+          <div>
+            <img class="project-image-xsmall" src="#"
+              alt="TBD">
+          </div>
+        </div>
+        <div class="note center">
+          <p>TBD</p>
+        </div>
+        <hr>
+        <h3>Outcomes</h3>
+        <p>
+        <ul>
+          <li>TBD</li>
+        </ul>
+        <hr>
+        <h3>New designs</h3>
+        <p>TBD
+        </p>
+        <div class="large-image-container">
+          <img class="project-image-large" src="#"
+            alt="TBD">
+        </div>
+        <hr>
+        <h3>Objectives follow-up</h3>
+        <p>
+          TBD
+        </p>
+        <hr>
+        <h3>Next steps</h3>
+        <p>
+        <ul>
+          <li>TBD
+          </li>
+        
+        </ul>
+        </p>
+        <br><br>
+        <div class="button-container">
+          <button class="button-secondary back-to-projects">Back to projects</button>
+        </div>
+  
 
         </div>
         </div>
         </div>
 
+        <!-- End of Automation Flow Versioning-->
+
+
+        <!-- Flow Builder Workshops -->
 
         <div id="workshopsOpened" class="hide">
     <div class="lightbox_content">
@@ -107,14 +205,107 @@
       <div class="project-lightbox-content">
         <h2>Flow Builder Workshops</h2>
         <h3>Overview</h3>
+      <p>TBD</p>
+      <hr>
+      <h3>Problem</h3>
+      <p>TBD</p>
+      <hr>
+      <h3>Original experience</h3>
+      <p>TBD</p>
+      <div class="large-image-container">
+        <img class="project-image-large" src="#"
+          alt="TBD">
+      </div>
+      <hr>
+      <h3>Research</h3>
+      <ul>
+        <li>UX hueristic evaluation*
+          <ul>
+            <li>TBD</li>
+          </ul>
+        </li>
+        <li>Design swarm
+          <ul>
+            <li>TBD</li>
+          </ul>
+        </li>
+      </ul>
+      <hr>
+      <h3>Objectives</h3>
+      <p>
+      <ul>
+        <li>TBD</li>
+      </ul>
+      </p>
+      <hr>
+      <h3>Process</h3>
+      <p>TBD</p>
+      <div class="large-image-container">
+        <img class="project-image-large" src="#"
+          alt="TBD">
+      </div>
+      <div class="note center">
+        <p>TBD</p>
+      </div>
+      <hr>
+      <h3>Testing</h3>
+      <p>TBD</p>
+      <ul>
+        <li>TBD</li>
+      </ul>
+      <div class="small-image-container">
+        <div>
+          <img class="project-image-xsmall" src="#"
+            alt="TBD">
+        </div>
+        <div>
+          <img class="project-image-xsmall" src="#"
+            alt="TBD">
+        </div>
+      </div>
+      <div class="note center">
+        <p>TBD</p>
+      </div>
+      <hr>
+      <h3>Outcomes</h3>
+      <p>
+      <ul>
+        <li>TBD</li>
+      </ul>
+      <hr>
+      <h3>New designs</h3>
+      <p>TBD
+      </p>
+      <div class="large-image-container">
+        <img class="project-image-large" src="#"
+          alt="TBD">
+      </div>
+      <hr>
+      <h3>Objectives follow-up</h3>
+      <p>
+        TBD
+      </p>
+      <hr>
+      <h3>Next steps</h3>
+      <p>
+      <ul>
+        <li>TBD
+        </li>
+      
+      </ul>
+      </p>
+      <br><br>
+      <div class="button-container">
+        <button class="button-secondary back-to-projects">Back to projects</button>
+      </div>
 
         </div>
         </div>
         </div>
 
+ <!-- End of Flow Builder Workshops -->
 
-
-
+      <!-- Flow Builder adoption content -->
 
 
   <div id="flowBuilderOpened" class="hide">
