--- a/index.html
+++ b/index.html
@@ -87,6 +87,35 @@
 
   <!-- Lightbox content -->
 
+  <!-- AI Infinity Testing -->
+
+  <div id="infinityOpened" class="hide">
+    <div class="lightbox_content">
+      <p class="material-icons close">close</p>
+      <div class="project-lightbox-content">
+        <h2>AI Infinity Testing</h2>
+        <p> HELLO</p>
+        </div>
+        </div>
+        </div>
+
+  <!-- End of AI Infinity Testing -->
+
+
+    <!-- Optimized A/B Splits -->
+
+    <div id="optimizedABOpened" class="hide">
+      <div class="lightbox_content">
+        <p class="material-icons close">close</p>
+        <div class="project-lightbox-content">
+          <h2>Optimized A/B Splits</h2>
+          <p> HELLO</p>
+          </div>
+          </div>
+          </div>
+  
+    <!-- End of Optimized A/B Splits -->
+
   <!-- Automation Flow Versioning -->
 
 <div id="versioningOpened" class="hide">
@@ -1285,7 +1314,22 @@ There is a button at the top right corner of an automation flow that opens the v
 
   <section id="projects" class="hide projects">
 
-<div class="projects-row">
+
+    <div class="projects-row">
+      <div class="project-wrapper">
+            <p class="project-name">AI Infinity Testing</p>
+            <div id="infinityTestingClosed" class="project infinity">
+            </div>
+          </div>
+          <div class="project-wrapper">
+            <p class="project-name">Optimized A/B Splits</p>
+            <div id="OptimizedABClosed" class="project optimized">
+            </div>
+          </div>
+        </div>
+
+
+    <div class="projects-row">
 <div class="project-wrapper">
       <p class="project-name">Automation Flow Versioning</p>
       <div id="versioningClosed" class="project versioning">
