More updates with new projects

--- a/index.html
+++ b/index.html
@@ -94,7 +94,13 @@
       <p class="material-icons close">close</p>
       <div class="project-lightbox-content">
         <h2>AI Infinity Testing</h2>
-        <p> HELLO</p>
+        <h3>Overview</h3>
+        <p>Postscript, an SMS marketing platform, released its first AI product that allows marketers to test hundreds to AI&ndash;generated messages against a control message.</p>
+        <hr>
+        <br><br>
+        <div class="button-container">
+          <button class="button-secondary back-to-projects">Back to projects</button>
+        </div>
         </div>
         </div>
         </div>
@@ -109,7 +115,13 @@
         <p class="material-icons close">close</p>
         <div class="project-lightbox-content">
           <h2>Optimized A/B Splits</h2>
-          <p> HELLO</p>
+          <h3>Overview</h3>
+        <p>Postscript, an SMS marketing platform, provides marketers with the ability to A/B test their text messages, and new functionality is being released to help marketers streamline this process. </p>
+        <hr>
+          <br><br>
+        <div class="button-container">
+          <button class="button-secondary back-to-projects">Back to projects</button>
+        </div>
           </div>
           </div>
           </div>
@@ -124,9 +136,9 @@
       <div class="project-lightbox-content">
         <h2>Automation Flow Versioning</h2>
         <h3>Overview</h3>
-        <p>Postscript, an SMS marketing platform, allows merchants to send automated messages (called automation flows) to their customers. Recently, new functionality has been added that allows merchants to see previous versions of their flows.</p>
+        <p>Postscript, an SMS marketing platform, allows marketers to send automated messages (called Automation Flows) to their customers. Recently, new functionality has been added that allows merchants to see previous versions of their flows.</p>
         <hr>
-        <h3>Problem</h3>
+        <!-- <h3>Problem</h3>
         <p>On average, 178 SMS merchants edit their automation flows every week. However, sometimes these edits result in a negative impact to their revenue, so merchants end up wanting to revert their changes. Up until recently, there was no way for merchants to revert their changes and also no easy way to compare analytics to previous automation versions. This lack of functionality not only led to frustration for Postscript customers, but prevented prospects from switching to Postscript from competitor platforms (that did provide this fucntionality).</p>
         <hr>
         <h3>Original experience</h3>
@@ -266,7 +278,7 @@ There is a button at the top right corner of an automation flow that opens the v
         <hr>
         <h3>Next steps</h3>
         <p>The next steps for expanding on the version history functionality include adding a duplication action for an automation flow and automating the description creation when a change is made to an automation flow.</li>
-        </p>
+        </p> -->
         <br><br>
         <div class="button-container">
           <button class="button-secondary back-to-projects">Back to projects</button>
