--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
         </p>
         Resume
       </a>
-      <a id="email" href="mailto:jannonjeffries@gmail.com">
+      <!-- <a id="email" href="mailto:jannonjeffries@gmail.com">
         <p id="emailIcon" class="material-icons">
           email
         </p>
         Email
-      </a>
+      </a> -->
     </div>
 
     <FORM>
