--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+
+
 
 
   <!-- Stylesheet -->
@@ -65,18 +66,18 @@
 
     <div class="contact">
       <a id="resume" target="_blank"
-        href="https://docs.google.com/document/d/15PjJdcsv_VlETdsOXHVBKPmZ6eb9s4rx74S8aS64bFc/edit?usp=sharing">
-        <p id="resumeIcon" class="material-icons">
+        href="https://docs.google.com/document/d/1khvQSvcY_vY1enU5aRe4SAUemzVgi1riAvGVlcvKJuQ/edit?usp=sharing">
+        <p id="resumeIcon" class="material-symbols-outlined">
           description
         </p>
         View Resume
       </a>
-      <!-- <a id="email" href="mailto:jannonjeffries@gmail.com">
-        <p id="emailIcon" class="material-icons">
-          email
+      <a id="linkedIn" target="_blank" href="https://www.linkedin.com/in/jannon-jeffries/">
+        <p id="workIcon" class="material-symbols-outlined">
+          work
         </p>
-        Email
-      </a> -->
+        View LinkedIn
+      </a>
     </div>
 
     <FORM>
